<resources>
    <string name="app_name">食药协作平台</string>
    <string name="app_splash_title">FE企業雲工作台</string>
    <string name="about_copyright">版權聲明：</string>
    <string name="about_copyright_content">此版本適用于安卓2.2版本以上操作系統手機，對于在其他操作系統平台使用本軟件出現的任何問題，本公司不承擔責任。本計算機程序受著作權和國際公約的保護。未經授權擅自複制或轉播本程序的部分或全部，可能受到嚴厲的民事及刑事制裁，並將在法律許可的範圍內受到最大可能的起訴。</string>
    <string name="imagesee_soft_name">圖片浏覽器</string>
    <string name="viewpager_button">開啟7.0</string>
    <string name="share_title">FE飛企互聯企業雲工作台</string>
    <string name="share_content">新壹代的互聯企業雲工作台，以“移動”爲紐帶，連接人、鏈接端、聯通內外，實現企業內外實時聯通壹切，爲企業互聯網轉型提供從後台到前端的壹體化解決方案，全面引領傳統企業向移動互聯網轉型。http://zhushou.360.cn/detail/index/soft_id/3255864</string>
    <string name="work_communication">工作溝通</string>
    <string name="collaboration_help">協同辦公</string>
    <string name="corporate_culture_help">企業文化</string>
    <string name="knowledge_management">知識管理</string>
    <string name="help_lxr">聯系人，壹鍵查找快速聯系</string>
    <string name="help_dd">多人語音，讓溝通變得暢通無阻</string>
    <string name="help_jstx">即時通訊，最便捷的工作方式</string>
    <string name="help_xx">消息，隨時掌握重要工作消息</string>
    <string name="help_sp">審批，企業重要信息不錯過</string>
    <string name="help_rc">日程，清晰了解工作安排</string>
    <string name="help_jh">計劃，讓工作計劃更便捷</string>
    <string name="help_qd">簽到，上班打卡簡單便捷</string>
    <string name="help_crm">CRM，更好的統計客戶與銷售資源</string>
    <string name="help_gg">公告，更早的了解公司的通知</string>
    <string name="help_xw">新聞，隨時隨地了解身邊的時事</string>
    <string name="help_hd">活動，工作之余的最佳解壓去處</string>
    <string name="help_tsq">同事圈，和身邊的小夥伴更親近</string>
    <string name="help_wd">文檔，工作的知識小金庫</string>
    <string name="help_wj">問卷，了解員工喜好的最佳方式</string>
    <string name="help_wdfx">文檔分享，好文檔大家壹起看</string>
    <string name="help_znss">智能搜索，壹鍵搜索所需文檔</string>
    <string name="help_ksfw">快速訪問，再也不用擔心找不到文檔啦</string>
    <string name="collaboration_recorder_ok">確定</string>
    <string name="collaboration_recorder_cancel">取消</string>
    <string name="flow_person">人員</string>
    <string name="flow_position">崗位</string>
    <string name="collaboration_attachment">附件</string>
    <string name="reply">回複</string>
    <string name="submit">發送</string>
    <string name="dialog_default_title">溫馨提示</string>
    <string name="dialog_button_yes">是</string>
    <string name="dialog_button_no">否</string>
    <string name="dialog_button_ok">確定</string>
    <string name="dialog_default_cancel_button_text">取消</string>
    <string name="common_language">常用語</string>
    <string name="message_operation_alert">操作成功</string>
    <string name="message_operation_fail">操作失敗，請重試!</string>
    <string name="fe_from_android_mobile"> (來自 Android)</string>
    <string name="fe_load_fail_try">加載失敗，點擊屏幕刷新</string>
    <string name="rename_fail">重名名失敗！</string>
    <string name="datepicker_button_ok">確定</string>
    <string name="datepicker_button_reset">清空</string>
    <string name="login_username">用戶名</string>
    <string name="login_pwd">密碼</string>
    <string name="setting_service_new">服務器</string>
    <string name="setting_http_setting">鏈接設置</string>
    <string name="setting_login_setting">登錄設置</string>
    <string name="setting_title">設置服務器</string>
    <string name="setting_port">端口號</string>
    <string name="setting_https_port">加密端口</string>
    <string name="setting_ok">完成</string>
    <string name="setting_cancel">取消</string>
    <string name="setting_adress_empty">請輸入登錄地址</string>
    <string name="setting_adress_checked">請檢查登錄地址是否正確</string>
    <string name="setting_port_empty">請輸入端口號</string>
    <string name="login_tips_rememberpassword">記住密碼</string>
    <string name="login_tips_autologin">自動登錄</string>
    <string name="login_btn_text_submit">登　錄</string>
    <string name="login_btn_text_cancal">取　消</string>
    <string name="login_btn_setting">設　置</string>
    <string name="login_username_empty">請輸入用戶名</string>
    <string name="login_password_empty">請輸入密碼</string>
    <string name="login_address_empty">請設置服務器地址</string>
    <string name="login_three_point">連接人 · 鏈接端 · 聯通內外</string>
    <string name="detail_title">詳情</string>
    <string name="collaboration_detail_title">協同詳情</string>
    <string name="form_detail_title">表單詳情</string>
    <string name="supplement_count_tip">正文補充(%1$d)</string>
    <string name="modification_count_tip">正文修改(%1$d)</string>
    <string name="attachment_count_tip">附件(%1$d)</string>
    <string name="reply_count_tip">他人意見(%1$d)</string>
    <string name="reply_empty_msg">請您輸入回複的內容</string>
    <string name="reply_succ">回複成功</string>
    <string name="reply_failure">回複失敗，請重試！</string>
    <string name="deal">辦理</string>
    <string name="add">加簽</string>
    <string name="back">退回</string>
    <string name="trace">跟蹤</string>
    <string name="cancel_trace">取消跟蹤</string>
    <string name="associate_collaboration_title">關聯事項</string>
    <string name="read">已閱</string>
    <string name="hide_views">隱藏意見</string>
    <string name="other_reply">他人回複</string>
    <string name="start_using">開始使用</string>
    <string name="check_attachment_no_format">暫不支持查看此文件類型</string>
    <string name="attachmentcontrolview_prompt_install_soft">無法打開，建議安裝查看此類型文件的軟件</string>
    <string name="search_empty_searchkey">搜索</string>
    <string name="choose_attachment_title">附件列表</string>
    <string name="choose_attachment_choosefile">文檔</string>
    <string name="choose_attachment_record">錄音</string>
    <string name="choose_attachment_photo">照片</string>
    <string name="choose_attachment_camera">拍照</string>
    <string name="choose_attachment_no_attachment">無附件</string>
    <string name="delete_file_success">附件刪除成功!</string>
    <string name="delete_file_fail">附件刪除失敗，請重新刪除!</string>
    <string name="file_name">文件名</string>
    <string name="collaboration_choose_file_title">選擇附件</string>
    <string name="collaboration_no_such_contact">暫無此人聯系方式</string>
    <string name="collaboration_search_contact">獲取聯系方式...</string>
    <string name="collaboration_dispose_edittext">請輸入您的意見</string>
    <string name="collaboration_title">請輸入標題</string>
    <string name="collaboration_content">請輸入內容</string>
    <string name="collaboration_send">發送協同</string>
    <string name="collaboration_send_do">送辦</string>
    <string name="collaboration_attachment_0">附件</string>
    <string name="collaboration_add_person_not">加簽（未加）</string>
    <string name="collaboration_add_person_yes">加簽（已加）</string>
    <string name="collaboration_flow_yes">辦理人（已選）</string>
    <string name="collaboration_flow_not">辦理人</string>
    <string name="collaboration_copy">份</string>
    <string name="collaboration_has_attachment">附件%d份</string>
    <string name="collaboration_touch">點擊</string>
    <string name="collaboration_back">協同退回</string>
    <string name="collaboration_add">協同加簽</string>
    <string name="collaboration_deal">協同處理</string>
    <string name="collaboration_add_message">您還沒加簽，需要加簽嗎？</string>
    <string name="collaboration_really_deal">確定要處理協同嗎？</string>
    <string name="collaboration_really_back">確定回退上壹個節點嗎？</string>
    <string name="collaboration_hint_input_view">請輸入您的意見</string>
    <string name="collaboration_back_tips">退出提示</string>
    <string name="collaboration_isrecording">正在錄音，是否保存此錄音？</string>
    <string name="collaboration_record_context">語音錄入成功，確定發送？</string>
    <string name="collaboration_select_picture_fail">選擇圖片失敗，請重新選擇！</string>
    <string name="collaboration_not_such_folder">此文件夾不存在或您沒有安裝sdcard</string>
    <string name="collaboration_too_much_file">選擇的附件不能多于20個</string>
    <string name="collaboration_input_title">請輸入協同標題</string>
    <string name="collaboration_toolong_title">協同標題過長，請簡短！</string>
    <string name="collaboration_add_flow">流程不能爲空，請添加流程</string>
    <string name="collaboration_no_recording">還沒錄音，若要退出請點擊取消</string>
    <string name="collaboration_attachment_document">此附件是正文文檔，不可刪除！</string>
    <string name="collaboration_out_of_memory">手機內存不足</string>
    <string name="collaboration_associate_collaboration">關聯事項</string>
    <string name="collaboration_general">平件</string>
    <string name="words_can_input">還能輸入%d個字</string>
    <string name="workplan_add_receiver">主送人不能爲空，請添加</string>
    <string name="settings_change_user">注銷賬戶</string>
    <string name="settings_clear">清除緩存</string>
    <string name="settings_version_upgrade">檢查更新</string>
    <string name="settings_notice">推送設置</string>
    <string name="settings_auto_sync_schedule">自動同步至本地日程</string>
    <string name="settings_about">關于我們</string>
    <string name="cancellation_dialog_context">確定注銷當前用戶?</string>
    <string name="more_filemanager">附件管理</string>
    <string name="more_setting_title">設置</string>
    <string name="more_finish_downlaod">已完成</string>
    <string name="form_input_idea_edittext_hint">請輸入您的意見</string>
    <string name="form_input_idea_istrace">是否跟蹤</string>
    <string name="form_input_idea_iswait">是否等待</string>
    <string name="form_input_idea_isReturnCurrentNode">重新提交後直接返回本節點</string>
    <string name="form_input_idea_title">處理意見</string>
    <string name="form_submit">發送</string>
    <string name="form_dispose_no_node">請選擇送辦人員</string>
    <string name="form_dispose_sendtodo">送辦</string>
    <string name="form_dispose_returnback">退回</string>
    <string name="form_senddo_next">下壹環節：</string>
    <string name="form_senddo_sendmore">送多人</string>
    <string name="form_list_title">流程中心</string>
    <string name="form_need_input">表單中存在必錄項，請輸入數據！</string>
    <string name="form_choose_node_person">人員選擇</string>
    <string name="form_choose_node_position">崗位選擇</string>
    <string name="form_choose_node_department">部門選擇</string>
    <string name="form_new_form_meetingboard_title">會議看板</string>
    <string name="form_exit_edit_tig">表單還沒發送，退出將不會保存，確定退出嗎？</string>
    <string name="form_null_checked_exit_data">數據已存在</string>
    <string name="form_null_checked_non_formid">此表單無ID！</string>
    <string name="form_null_addsign">請選擇加簽人員</string>
    <string name="UMFeedbackConversationTitle">意見反饋</string>
    <string name="button_delete">刪除</string>
    <string name="message_misson_title">任務消息</string>
    <string name="message_nofity_title">待閱消息</string>
    <string name="message_cyrcle_item">圈子消息</string>
    <string name="message_system_title">系統消息</string>
    <string name="submit_ok">完成</string>
    <string name="lbl_text_vpn_server">服務器</string>
    <string name="lbl_text_vpn_port">端口號</string>
    <string name="lbl_text_vpn_username">賬號</string>
    <string name="lbl_text_vpn_password">密碼</string>
    <string name="cancel">取消</string>
    <string name="know_open">打開</string>
    <string name="know_collect">收藏</string>
    <string name="know_more_control">更多</string>
    <string name="know_cancel_public">取消發布</string>
    <string name="know_button_move">移動</string>
    <string name="know_button_rename">重命名</string>
    <string name="know_button_public">發布</string>
    <string name="know_button_down">下載</string>
    <string name="action_revocation">撤銷</string>
    <string name="action_transmit">轉發</string>
    <string name="action_circulate">傳閱</string>
    <string name="action_supplement">補充正文</string>
    <string name="action_view_flow">查看流程</string>
    <string name="login_zxing_confirm">登錄</string>
    <string name="login_zxing_cancel">取消登錄</string>
    <string name="login_zxing_hint">妳的帳號申請在電腦端登錄</string>
    <string name="plan_rule_selected_hint">請選擇</string>
    <string name="plan_create_start_time">開始時間</string>
    <string name="plan_create_end_time">結束時間</string>
    <string name="plan_filter_type">選擇類型</string>
    <string name="plan_filter_users">選人</string>
    <string name="plan_filter_reset">重置</string>
    <string name="plan_filter_confirm">確定</string>
    <string name="action_collection">收藏</string>
    <string name="action_collection_cancel">取消收藏</string>
    <string name="contacts_all">所有人</string>
    <string name="contacts_group_chat">群聊</string>
    <string name="contacts_subordinates">下屬</string>
    <string name="contacts_follow">關注人</string>
</resources>