<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/llBottomMenu"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:background="@color/bdp_white"
              android:orientation="vertical"
              android:visibility="gone">
    <include layout="@layout/view_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/mdp_48"
        android:orientation="horizontal"
        >
        <!--下载-->
        <LinearLayout
            android:id="@+id/down_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">
            <ImageView
                style="@style/KnowledgeFootMenuImageStyle"
                android:src="@drawable/icon_download_file"/>
            <TextView
                android:text="@string/know_button_down"
                style="@style/KnowledgeFootMenuTextStyle"/>
        </LinearLayout>
        <!--删除-->
        <LinearLayout
            android:id="@+id/delete_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">
            <ImageView
                style="@style/KnowledgeFootMenuImageStyle"
                android:src="@drawable/icon_delete_file"/>
            <TextView
                android:text="@string/button_delete"
                style="@style/KnowledgeFootMenuTextStyle"/>

        </LinearLayout>
        <!--移动-->
        <LinearLayout
            android:id="@+id/move_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">
            <ImageView
                style="@style/KnowledgeFootMenuImageStyle"
                android:src="@drawable/icon_remove_file"/>
            <TextView
                android:text="@string/know_button_move"
                style="@style/KnowledgeFootMenuTextStyle"/>
        </LinearLayout>
        <!--重命名-->
        <LinearLayout
            android:id="@+id/rename_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">
            <ImageView
                style="@style/KnowledgeFootMenuImageStyle"
                android:src="@drawable/icon_rename_file"/>
            <TextView
                android:text="@string/know_button_rename"
                style="@style/KnowledgeFootMenuTextStyle"/>
        </LinearLayout>
        <!--发布-->
        <LinearLayout
            android:id="@+id/share_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">
            <ImageView
                style="@style/KnowledgeFootMenuImageStyle"
                android:src="@drawable/icon_release_file"/>
            <TextView
                android:text="@string/know_button_public"
                style="@style/KnowledgeFootMenuTextStyle"/>
        </LinearLayout>
        <!--收藏-->
        <LinearLayout
            android:id="@+id/collect_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView
                android:id="@+id/iv_collect"
                style="@style/KnowledgeFootMenuImageStyle"
                android:src="@drawable/icon_collect_file"/>
            <TextView
                android:id="@+id/tv_collect"
                android:text="@string/know_collect"
                style="@style/KnowledgeFootMenuTextStyle"/>
        </LinearLayout>
        <!--更多-->
        <LinearLayout
            android:id="@+id/more_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView
                style="@style/KnowledgeFootMenuImageStyle"
                android:src="@drawable/icon_more_control"/>
            <TextView
                android:text="@string/know_more_control"
                style="@style/KnowledgeFootMenuTextStyle"/>
        </LinearLayout>
        <!--取消发布-->
        <LinearLayout
            android:id="@+id/cancel_publish_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView
                style="@style/KnowledgeFootMenuImageStyle"
                android:src="@drawable/revoke_pre"/>
            <TextView
                android:text="@string/know_cancel_public"
                style="@style/KnowledgeFootMenuTextStyle"/>

        </LinearLayout>
        <!--打开-->
        <LinearLayout
            android:id="@+id/open_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">
            <ImageView
                style="@style/KnowledgeFootMenuImageStyle"
                android:src="@drawable/open_pre"/>
            <TextView
                android:text="@string/know_open"
                style="@style/KnowledgeFootMenuTextStyle"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
