<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_main_contacts_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/icon_contacts_all"
            android:gravity="center"
            android:text="@string/contacts_all"
            android:textColor="@color/gray_black_text"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/item_main_contacts_group_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/icon_contact_group_chat"
            android:gravity="center"
            android:text="@string/contacts_group_chat"
            android:textColor="@color/gray_black_text"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/item_main_contacts_subordinates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/icon_contact_department"
            android:gravity="center"
            android:text="@string/contacts_subordinates"
            android:textColor="@color/gray_black_text"
            android:textSize="13sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/item_main_contacts_follow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/icon_contact_follow"
            android:gravity="center"
            android:text="@string/contacts_follow"
            android:textColor="@color/gray_black_text"
            android:textSize="13sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/mdp_10"
        android:background="@color/backgroud_grey" />
</LinearLayout>