<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="@dimen/mdp_8">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout style="@style/setting_vpn_input_layout">
            <TextView
                style="@style/setting_vpn_input_title"
                android:text="@string/lbl_text_vpn_server"/>
            <EditText
                android:id="@+id/etVPNHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:imeOptions="actionDone"
                android:textColor="@color/text_menu_text_color"
                android:textSize="@dimen/text_little_size"
                android:minHeight="@dimen/row_vs_height"
                android:selectAllOnFocus="true"
                android:digits="0123456789QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm.-_/"/>
        </LinearLayout>
        <View
            style="@style/vpn_bottom_line"
            android:layout_marginLeft="@dimen/mdp_16"/>
        <LinearLayout style="@style/setting_vpn_input_layout">
            <TextView
                style="@style/setting_vpn_input_title"
                android:text="@string/lbl_text_vpn_port"/>
            <EditText
                android:id="@+id/etVPNPort"
                style="@style/setting_vpn_input_context"
                android:digits="0123456789"
                android:inputType="number"/>
        </LinearLayout>
        <View
            style="@style/vpn_bottom_line"
            android:layout_marginLeft="@dimen/mdp_16"/>
        <LinearLayout style="@style/setting_vpn_input_layout">
            <TextView
                style="@style/setting_vpn_input_title"
                android:text="@string/lbl_text_vpn_username"/>
            <EditText
                android:id="@+id/etVPNAccount"
                style="@style/setting_vpn_input_context"/>
        </LinearLayout>
        <View
            style="@style/vpn_bottom_line"
            android:layout_marginLeft="@dimen/mdp_16"/>
        <LinearLayout style="@style/setting_vpn_input_layout">
            <TextView
                style="@style/setting_vpn_input_title"
                android:text="@string/lbl_text_vpn_password"/>
            <EditText
                android:id="@+id/etVPNPassword"
                style="@style/setting_vpn_input_context"
                android:inputType="textPassword"/>
        </LinearLayout>
        <View
            style="@style/vpn_bottom_line"
            android:layout_marginLeft="@dimen/mdp_16"/>
        <LinearLayout
            android:id="@+id/llBottomOperateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/mdp_16"
            android:paddingRight="@dimen/mdp_8"
            android:paddingTop="@dimen/mdp_20">
            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:paddingBottom="@dimen/mdp_4"
                android:paddingLeft="@dimen/mdp_8"
                android:paddingRight="@dimen/mdp_8"
                android:paddingTop="@dimen/mdp_4"
                android:text="@string/dialog_default_cancel_button_text"
                android:textSize="@dimen/mdp_16"/>
            <TextView
                android:id="@+id/tvConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mdp_8"
                android:background="?attr/selectableItemBackground"
                android:paddingBottom="@dimen/mdp_4"
                android:paddingLeft="@dimen/mdp_8"
                android:paddingRight="@dimen/mdp_16"
                android:paddingTop="@dimen/mdp_4"
                android:text="@string/submit_ok"
                android:textColor="@color/defaultColorAccent"
                android:textSize="@dimen/mdp_16"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
