<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/core_view_toolbar"/>

    <ImageView
        android:id="@+id/login_zxing_icon"
        android:layout_width="120dp"
        android:layout_height="91dp"
        android:layout_marginTop="@dimen/mdp_100"
        android:layout_below="@+id/toolBar"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_zxing_icon"/>

    <TextView
        android:id="@+id/login_zing_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mdp_30"
        android:layout_below="@+id/login_zxing_icon"
        android:layout_centerHorizontal="true"
        android:text="@string/login_zxing_hint"
        android:textColor="#04121A"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/confirm_login"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_above="@+id/cancel_login"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/login_zxing_confirm"
        android:textColor="#28B9FF"
        android:background="@drawable/login_zxing_but_icon"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/cancel_login"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginBottom="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/login_zxing_cancel"
        android:textColor="#9DA3A6"
        android:textSize="14sp"/>

</RelativeLayout>